feat: evolve architecture to REST API